# monitor-competitividade-price-gap.

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: generate_sample_data.py  run_pipeline.py
src/price_gap_monitor/: pipeline.py
src/price_gap_monitor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
